overflow added to main content to fix header

--- a/src/app/partial/partial-layout/partial-layout.component.scss
+++ b/src/app/partial/partial-layout/partial-layout.component.scss
@@ -53,6 +53,8 @@
   
 .main-content{
   padding: 10px;
+  height: calc(100vh - 68px);
+  overflow-y: auto;
 }
 footer{
   position: fixed;
